# commons-collections

./: .gitignore  BUILD  WORKSPACE  generate_workspace.bzl
src/main/java/org/apache/commons/collections4/: BUILD
src/test/java/org/apache/commons/collections4/: BUILD  BUILD.bazel
