load("//src/test:junit.bzl", "junit_tests")

TEST_CASE_SRCS = glob(
    ["**/*Test.java"],
    exclude = [
        "**/Abstract*Test.java",
        "BulkTest.java",
        # TODO: what's wrong with this test case?
        "queue/SynchronizedQueueTest.java",
    ],
)

java_library(
    name = "support",
    testonly = 1,
    srcs = glob(
        ["**/*.java"],
        exclude = TEST_CASE_SRCS,
    ),
    javacopts = ["-XepDisableAllChecks"],
    deps = [
        "//src/main/java/org/apache/commons/collections4",
        "//third_party:junit_junit",
        "//third_party:org_apache_commons_commons_lang3",
        "//third_party:org_easymock_easymock",
        "//third_party:org_hamcrest_hamcrest_core",
        "//third_party:org_objenesis_objenesis",
    ],
)

junit_tests(
    name = "tests",
    testonly = 1,
    srcs = TEST_CASE_SRCS,
    data = ["//src/test/resources"],
    javacopts = ["-XepDisableAllChecks"],
    deps = [
        ":support",
        "//src/main/java/org/apache/commons/collections4",
        "//third_party:junit_junit",
        "//third_party:org_apache_commons_commons_lang3",
        "//third_party:org_easymock_easymock",
        "//third_party:org_hamcrest_hamcrest_core",
        "//third_party:org_objenesis_objenesis",
    ],
)
